2002-04-20  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (set_flabel), (new_game), (preferences_callback),
	(nstr), (main):
	* minefield.c: (_setup_sign), (gtk_mine_draw),
	(gtk_minefield_lose), (gtk_minefield_win),
	(gtk_minefield_toggle_mark), (gtk_minefield_button_press),
	(gtk_minefield_button_release), (gtk_minefield_class_init),
	(gtk_minefield_new), (gtk_minefield_get_type),
	(gtk_minefield_restart):
	* minefield.h: ported to GObject, fixed resize bug, it's now
	fully ported to Gnome2

2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (image_widget_setup), (about), (size_radio_callback),
	(apply_cb), (preferences_callback), (main):
	* minefield.c: (gtk_minefield_expose), (gtk_minefield_restart):
	one step closer to gnome2 porting (removed GnomePropertyBox,
	gnome_config_*, gnome_pixmap_*)

2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* gnomine.c: (about), (main): remove ENABLE_NLS, add nice icon
	* minefield.c: (gtk_minefield_setup_numbers):
	move the numbers 4 pixels up, which should "fix" the numbers
	appearing between cells

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (set_flabel):
	* minefield.c: (gtk_minefield_setup_signs),
	(gtk_minefield_realize), (gtk_minefield_size_request),
	(gtk_mine_draw), (gtk_minefield_check_cell), (gtk_minefield_lose),
	(gtk_minefield_win), (gtk_minefield_randomize),
	(gtk_minefield_show), (gtk_minefield_toggle_mark),
	(gtk_minefield_multi_press), (gtk_minefield_multi_release),
	(gtk_minefield_motion_notify), (init_random), (get_random),
	(gtk_minefield_get_type), (gtk_minefield_restart):
	* minefield.h:
	* question.xpm: gameplay enhancements adapted from patch by
	wrstock@buckeye.cb.lucent.com (Bill Stock) (Closes: #78576,
	#77751)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnome-mines.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template
