@@ -1,3 +1,8 @@
+2002-05-05  Chris Lyttle <chris@wilddev.net>
+
+	* help/C/Makefile.am: updated for new format of SK 0.3.8.
+	* help/C/gnome-mines-C.omf: updated for new format of SK 0.3.8.
+	
 2002-04-20  Bastien Nocera  <hadess@hadess.net>
 
 	* Makefile.am:
